--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.danielway
+pluginGroup = com.danielway.agnostic
 pluginName = intellij-agnostic
 pluginRepositoryUrl = https://github.com/danielway/intellij-agnostic
 # SemVer format -> https://semver.org
