--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -14,7 +14,7 @@
                 implementationClass="org.intellij.sdk.language.AgnosticFileType"
                 fieldName="INSTANCE"
                 language="Agnostic"
-                extensions="agnostic"/>
+                extensions="agn"/>
     </extensions>
 
     <applicationListeners>
