Add Agnostic color settings

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -24,6 +24,9 @@
                 language="Agnostic"
                 implementationClass="org.intellij.sdk.language.AgnosticSyntaxHighlighterFactory"
         />
+        <colorSettingsPage
+                implementation="org.intellij.sdk.language.AgnosticColorSettingsPage"
+        />
     </extensions>
 
     <applicationListeners>
